--- a/login.html
+++ b/login.html
@@ -54,7 +54,7 @@ https://templatemo.com/tm-583-festava-live
 
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="home.html">
+                <a class="navbar-brand" href="/home">
                     <img src="https://www.uhamka.ac.id/static/media/UhamaLogo2.d4e8b86c517ad991c800.png" width="auto" height="65px" class="d-inline-block align-top" alt="">
                  
                 </a>
@@ -69,7 +69,7 @@ https://templatemo.com/tm-583-festava-live
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="home.html">Halaman Utama</a>
+                            <a class="nav-link click-scroll" href="/home">Halaman Utama</a>
                         </li>
 
                         <li class="nav-item">
