--- a/register.html
+++ b/register.html
@@ -69,7 +69,7 @@ https://templatemo.com/tm-583-festava-live
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="home.html">Halaman Utama</a>
+                            <a class="nav-link click-scroll" href="/home">Halaman Utama</a>
                         </li>
 
                         <li class="nav-item">
@@ -224,7 +224,7 @@ https://templatemo.com/tm-583-festava-live
 
                     <ul class="site-footer-links">
                         <li class="site-footer-link-item">
-                            <a href="#" class="site-footer-link">Halaman Utama</a>
+                            <a href="/home" class="site-footer-link">Halaman Utama</a>
                         </li>
 
                         <li class="site-footer-link-item">
