--- a/home.html
+++ b/home.html
@@ -442,7 +442,7 @@ https://templatemo.com/tm-583-festava-live
                         </li>
 
                         <li class="site-footer-link-item">
-                            <a href="login.html" class="site-footer-link">Login</a>
+                            <a href="/login" class="site-footer-link">Login</a>
                         </li>
 
                         <li class="site-footer-link-item">
