--- a/register.html
+++ b/register.html
@@ -81,7 +81,7 @@ https://templatemo.com/tm-583-festava-live
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="home.html#section_4">Login</a>
+                            <a class="nav-link click-scroll" href="/login">Login</a>
                         </li>
 
                         <li class="nav-item">
@@ -236,7 +236,7 @@ https://templatemo.com/tm-583-festava-live
                         </li>
 
                         <li class="site-footer-link-item">
-                            <a href="home.html#section_4" class="site-footer-link">Login</a>
+                            <a href="/login" class="site-footer-link">Login</a>
                         </li>
 
                         <li class="site-footer-link-item">
