--- a/register.html
+++ b/register.html
@@ -224,7 +224,7 @@ https://templatemo.com/tm-583-festava-live
 
                     <ul class="site-footer-links">
                         <li class="site-footer-link-item">
-                            <a href="/home" class="site-footer-link">Halaman Utama</a>
+                            <a href="/hom" class="site-footer-link">Halaman Utama</a>
                         </li>
 
                         <li class="site-footer-link-item">
