--- a/resources/login.html
+++ b/resources/login.html
@@ -107,8 +107,7 @@ https://templatemo.com/tm-583-festava-live
 
                             <div class="ticket-form-body">
                                 
-                                <input type="text" class="form-control" name="nim"
-                                    placeholder="NIM" required>
+                                <input type="text" class="form-control" name="nim" id="nim" placeholder="NIM" required>
                                     <!-- placeholder="Ph 085-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required=""> -->
                                 
                                 <div class="row">
@@ -121,6 +120,11 @@ https://templatemo.com/tm-583-festava-live
                                         <input type="password" name="password" id="password" class="form-control" placeholder="Password"
                                             required>
                                     </div>
+
+                                    <div class="col-lg-4 col-md-10 col-8 mx-auto">
+                                        <button type="submit" class="form-control">Submit
+                                </div>
+
                                 </form>
                             </div>
                         </div>
