--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@ https://templatemo.com/tm-583-festava-live
                         </li>
                     </ul>
 
-                    <a href="register.html" class="btn custom-btn d-lg-block d-none">Daftar</a>
+                    <a href="/register" class="btn custom-btn d-lg-block d-none">Daftar</a>
                 </div>
             </div>
         </nav>
