--- a/register.html
+++ b/register.html
@@ -32,9 +32,7 @@ https://templatemo.com/tm-583-festava-live
 
 </head>
 
-<body {
-    overflow: hidden;
-  }>
+<body>
 
     <main>
 
@@ -75,7 +73,7 @@ https://templatemo.com/tm-583-festava-live
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="home.html#section_2">Tentang</a>
+                            <a class="nav-link click-scroll" href="/about">Tentang</a>
                         </li>
 
                         <li class="nav-item">
@@ -230,7 +228,7 @@ https://templatemo.com/tm-583-festava-live
                         </li>
 
                         <li class="site-footer-link-item">
-                            <a href="home.html#section_2" class="site-footer-link">Tentang</a>
+                            <a href="/about" class="site-footer-link">Tentang</a>
                         </li>
 
                         <li class="site-footer-link-item">
