--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@ https://templatemo.com/tm-583-festava-live
 
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="home.html">
+                <a class="navbar-brand" href="/home">
                     <img src="https://www.uhamka.ac.id/static/media/UhamaLogo2.d4e8b86c517ad991c800.png" width="auto" height="65px" class="d-inline-block align-top" alt="">
                   
                 </a>
@@ -79,7 +79,7 @@ https://templatemo.com/tm-583-festava-live
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="login.html">Login</a>
+                            <a class="nav-link click-scroll" href="/login">Login</a>
                         </li>
 
                         <li class="nav-item">
@@ -104,7 +104,7 @@ https://templatemo.com/tm-583-festava-live
 
                         <h1 class="text-white mb-5">Portal Pendaftaran PKL</h1>
 
-                        <a class="btn custom-btn smoothscroll" href="register.html">Daftar Sekarang</a>
+                        <a class="btn custom-btn smoothscroll" href="/register">Daftar Sekarang</a>
                     </div> 
 
                     <div class="col-lg-12 col-12 mt-auto d-flex flex-column flex-lg-row text-center">
