--- a/admin/home_admin.html
+++ b/admin/home_admin.html
@@ -99,10 +99,14 @@ https://templatemo.com/tm-583-festava-live
             <a href="/register" class="btn custom-btn d-lg-block d-none"
               >Daftar</a
             >
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+              <li><a href="/">Home</a></li>
+              <li><a href="/logout">Logout</a></li>
+            </ul>
           </div>
         </div>
       </nav>
-
+      <h3>Welcome {{ .username }}</h3>
       <section class="hero-section" id="section_1">
         <div class="section-overlay"></div>
 
