--- a/home.html
+++ b/home.html
@@ -80,7 +80,7 @@ https://templatemo.com/tm-583-festava-live
               </li>
 
               <li class="nav-item">
-                <a class="nav-link click-scroll" href="/about">Tentang</a>
+                <a class="nav-link click-scroll" href="#section_2">Tentang</a>
               </li>
 
               <li class="nav-item">
@@ -88,11 +88,11 @@ https://templatemo.com/tm-583-festava-live
               </li>
 
               <li class="nav-item">
-                <a class="nav-link click-scroll" href="/login">Login</a>
+                <a class="nav-link click-scroll" href="#section_4">Kontak</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link click-scroll" href="#section_5">Kontak</a>
+                <a class="nav-link" href="/login">Login</a>
               </li>
             </ul>
 
@@ -364,7 +364,7 @@ https://templatemo.com/tm-583-festava-live
 
       <section
         class="pricing-section section-padding section-bg"
-        id="section_5"
+        id="section_4"
       >
         <div class="container">
           <div class="row">
@@ -566,11 +566,11 @@ https://templatemo.com/tm-583-festava-live
               </li>
 
               <li class="site-footer-link-item">
-                <a href="/login" class="site-footer-link">Login</a>
+                <a href="#section_4" class="site-footer-link">Kontak</a>
               </li>
 
               <li class="site-footer-link-item">
-                <a href="#section_5" class="site-footer-link">Kontak</a>
+                <a href="/login" class="site-footer-link">Login</a>
               </li>
             </ul>
           </div>
