--- a/register.html
+++ b/register.html
@@ -73,19 +73,19 @@ https://templatemo.com/tm-583-festava-live
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="/about">Tentang</a>
+                            <a class="nav-link click-scroll" href="/home#section_2">Tentang</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="home.html#section_3">Jadwal</a>
+                            <a class="nav-link click-scroll" href="/home#section_3">Jadwal</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="/login">Login</a>
+                            <a class="nav-link click-scroll" href="/home#section_4">Kontak</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="home.html#section_5">Kontak</a>
+                            <a class="nav-link" href="/login">Login</a>
                         </li>
                     </ul>
 
@@ -228,19 +228,19 @@ https://templatemo.com/tm-583-festava-live
                         </li>
 
                         <li class="site-footer-link-item">
-                            <a href="/about" class="site-footer-link">Tentang</a>
+                            <a href="/home#section_2" class="site-footer-link">Tentang</a>
                         </li>
 
                         <li class="site-footer-link-item">
-                            <a href="home.html#section_3" class="site-footer-link">Jadwal</a>
+                            <a href="/home#section_3" class="site-footer-link">Jadwal</a>
+                        </li>
+
+                        <li class="site-footer-link-item">
+                            <a href="/home#section_4" class="site-footer-link">Kontak</a>
                         </li>
 
                         <li class="site-footer-link-item">
                             <a href="/login" class="site-footer-link">Login</a>
-                        </li>
-
-                        <li class="site-footer-link-item">
-                            <a href="home.html#section_5" class="site-footer-link">Kontak</a>
                         </li>
 
             
