--- a/home_admin.html
+++ b/home_admin.html
@@ -51,7 +51,7 @@ https://templatemo.com/tm-583-festava-live
 
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="/home">
+          <a class="navbar-brand" href="/home_admin">
             <img
               src="https://www.uhamka.ac.id/static/media/UhamaLogo2.d4e8b86c517ad991c800.png"
               width="auto"
@@ -76,11 +76,13 @@ https://templatemo.com/tm-583-festava-live
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
               <li class="nav-item">
-                <a class="nav-link click-scroll" href="/home">Halaman Utama</a>
+                <a class="nav-link click-scroll" href="/home_admin"
+                  >Halaman Utama</a
+                >
               </li>
 
               <li class="nav-item">
-                <a class="nav-link click-scroll" href="/about">Tentang</a>
+                <a class="nav-link click-scroll" href="#section_2">Tentang</a>
               </li>
 
               <li class="nav-item">
@@ -88,21 +90,19 @@ https://templatemo.com/tm-583-festava-live
               </li>
 
               <li class="nav-item">
-                <a class="nav-link click-scroll" href="/login">Login</a>
+                <a class="nav-link click-scroll" href="#section_4">Kontak</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link click-scroll" href="#section_5">Kontak</a>
+                <a class="nav-link" href="/logout">Logout</a>
               </li>
             </ul>
 
             <a href="/register" class="btn custom-btn d-lg-block d-none"
               >Daftar</a
             >
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li><a href="/">Home</a></li>
-              <li><a href="/logout">Logout</a></li>
-            </ul>
+
+            <!-- <li><a href="/">Home</a></li> -->
           </div>
         </div>
       </nav>
@@ -368,7 +368,7 @@ https://templatemo.com/tm-583-festava-live
 
       <section
         class="pricing-section section-padding section-bg"
-        id="section_5"
+        id="section_4"
       >
         <div class="container">
           <div class="row">
@@ -570,11 +570,11 @@ https://templatemo.com/tm-583-festava-live
               </li>
 
               <li class="site-footer-link-item">
-                <a href="/login" class="site-footer-link">Login</a>
+                <a href="#section_4" class="site-footer-link">Kontak</a>
               </li>
 
               <li class="site-footer-link-item">
-                <a href="#section_5" class="site-footer-link">Kontak</a>
+                <a href="/logout" class="site-footer-link">logout</a>
               </li>
             </ul>
           </div>
