--- a/home.html
+++ b/home.html
@@ -41,7 +41,6 @@ https://templatemo.com/tm-583-festava-live
           <div class="row">
             <div class="col-lg-12 col-12 d-flex flex-wrap">
               <p class="d-flex me-4 mb-0">
-                <i class="bi-person custom-icon me-2"></i>
                 <strong class="text-dark">Selamat datang!</strong>
               </p>
             </div>
@@ -111,7 +110,9 @@ https://templatemo.com/tm-583-festava-live
             <div class="col-12 mt-auto mb-5 text-center">
               <small>UHAMKA mempersembahkan</small>
 
-              <h1 class="text-white mb-5">Portal Pendaftaran PKL</h1>
+              <font color="#1b2f5c">
+                <h1 class="text-mb-5">Portal Pendaftaran PKL</h1>
+              </font>
 
               <a class="btn custom-btn smoothscroll" href="/register"
                 >Daftar Sekarang</a
@@ -232,18 +233,6 @@ https://templatemo.com/tm-583-festava-live
                   src="images/uhamkapkl.jpeg"
                   class="about-image img-fluid"
                 />
-
-                <div class="about-text-info d-flex">
-                  <div class="d-flex">
-                    <i class="about-text-icon bi-person"></i>
-                  </div>
-
-                  <div class="ms-4">
-                    <h3>a happy moment</h3>
-
-                    <p class="mb-0">your amazing festival experience with us</p>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
