--- a/home_user.html
+++ b/home_user.html
@@ -42,7 +42,7 @@ https://templatemo.com/tm-583-festava-live
             <div class="col-lg-12 col-12 d-flex flex-wrap">
               <p class="d-flex me-4 mb-0">
                 <i class="bi-person custom-icon me-2"></i>
-                <strong class="text-dark">Selamat datang!</strong>
+                <strong class="text-dark">Selamat Datang {{ .username}}</strong>
               </p>
             </div>
           </div>
@@ -51,7 +51,7 @@ https://templatemo.com/tm-583-festava-live
 
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="/home_admin">
+          <a class="navbar-brand" href="/home_user">
             <img
               src="https://www.uhamka.ac.id/static/media/UhamaLogo2.d4e8b86c517ad991c800.png"
               width="auto"
@@ -76,7 +76,7 @@ https://templatemo.com/tm-583-festava-live
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
               <li class="nav-item">
-                <a class="nav-link click-scroll" href="/home_admin"
+                <a class="nav-link click-scroll" href="/home_user"
                   >Halaman Utama</a
                 >
               </li>
@@ -97,16 +97,9 @@ https://templatemo.com/tm-583-festava-live
                 <a class="nav-link" href="/logout">Logout</a>
               </li>
             </ul>
-
-            <a href="/register" class="btn custom-btn d-lg-block d-none"
-              >Daftar</a
-            >
-
-            <!-- <li><a href="/">Home</a></li> -->
           </div>
         </div>
       </nav>
-      <h3>Welcome {{ .username }}</h3>
       <section class="hero-section" id="section_1">
         <div class="section-overlay"></div>
 
@@ -115,11 +108,9 @@ https://templatemo.com/tm-583-festava-live
             <div class="col-12 mt-auto mb-5 text-center">
               <small>UHAMKA mempersembahkan</small>
 
-              <h1 class="text-white mb-5">Portal Pendaftaran PKL</h1>
-
-              <a class="btn custom-btn smoothscroll" href="/register"
-                >Daftar Sekarang</a
-              >
+              <font color="#1b2f5c">
+                <h1 class="text-mb-5">Portal Pendaftaran PKL</h1>
+              </font>
             </div>
 
             <div
