--- a/register.html
+++ b/register.html
@@ -133,20 +133,26 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                 </div>
 
+                                <font color="#F0F0F0">
                                 <label class="form-label" for="upload_file">Upload Surat</label>
                                 <input type="file" name="upload_file" class="form-control" id="upload_file"/>
+                            </font>
 
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-12">
+                                        <font color="#F0F0F0">
                                         <label for="mulai_pkl">Mulai PKL</label>
                                         <input type="date" name="mulai_pkl" id="mulai_pkl"
                                             class="form-control" placeholder="Mulai PKL" required>
+                                        </font>
                                     </div>
 
                                     <div class="col-lg-6 col-md-6 col-12">
+                                        <font color="#F0F0F0">
                                         <label for="selesai_pkl">Selesai PKL</label>
                                         <input type="date" name="selesai_pkl" id="selesai_pkl" class="form-control" placeholder="Selesai PKL"
                                             required>
+                                        </font>
                                     </div>
 
                                     <div class="col-lg-6 col-md-6 col-12">
