--- a/home.html
+++ b/home.html
@@ -109,11 +109,10 @@ https://templatemo.com/tm-583-festava-live
           <div class="row">
             <div class="col-12 mt-auto mb-5 text-center">
               <small>UHAMKA mempersembahkan</small>
-
+              F0F0F0
               <font color="#1b2f5c">
                 <h1 class="text-mb-5">Portal Pendaftaran PKL</h1>
               </font>
-
               <a class="btn custom-btn smoothscroll" href="/register"
                 >Daftar Sekarang</a
               >
@@ -543,7 +542,7 @@ https://templatemo.com/tm-583-festava-live
             <h5 class="site-footer-title mb-3">Links</h5>
             <ul class="site-footer-links">
               <li class="site-footer-link-item">
-                <a href="/home" class="site-footer-link">Halaman Utama</a>
+                <a href="#" class="site-footer-link">Halaman Utama</a>
               </li>
 
               <li class="site-footer-link-item">
