--- a/home_user.html
+++ b/home_user.html
@@ -93,8 +93,17 @@ https://templatemo.com/tm-583-festava-live
                 <a class="nav-link click-scroll" href="#section_4">Kontak</a>
               </li>
 
+              <li class="site-footer-link-item">
+                <a href="/profile" class="nav-link">Profile</a>
+              </li>
+
               <li class="nav-item">
-                <a class="nav-link" href="/logout">Logout</a>
+                <a
+                  class="nav-link"
+                  href="/logout"
+                  onclick="return confirm('Are you sure want to logout?')"
+                  >Logout</a
+                >
               </li>
             </ul>
           </div>
@@ -549,7 +558,7 @@ https://templatemo.com/tm-583-festava-live
             <h5 class="site-footer-title mb-3">Links</h5>
             <ul class="site-footer-links">
               <li class="site-footer-link-item">
-                <a href="/home" class="site-footer-link">Halaman Utama</a>
+                <a href="#" class="site-footer-link">Halaman Utama</a>
               </li>
 
               <li class="site-footer-link-item">
@@ -562,6 +571,10 @@ https://templatemo.com/tm-583-festava-live
 
               <li class="site-footer-link-item">
                 <a href="#section_4" class="site-footer-link">Kontak</a>
+              </li>
+
+              <li class="site-footer-link-item">
+                <a href="/profile" class="nav-link">Profile</a>
               </li>
 
               <li class="site-footer-link-item">
