--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Ubah Data</title>
+    <title>Profile</title>
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -73,19 +73,23 @@ https://templatemo.com/tm-583-festava-live
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="/home#section_2">Tentang</a>
+                            <a class="nav-link click-scroll" href="/home_user#section_2">Tentang</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="/home#section_3">Jadwal</a>
+                            <a class="nav-link click-scroll" href="/home_user#section_3">Jadwal</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="/home#section_4">Kontak</a>
+                            <a class="nav-link click-scroll" href="/home_user#section_4">Kontak</a>
                         </li>
 
+                        <li class="site-footer-link-item">
+                            <a href="/profile" class="nav-link">Profile</a>
+                          </li>
+
                         <li class="nav-item">
-                            <a class="nav-link" href="/login">Login</a>
+                            <a class="nav-link" href="/logout">Logout</a>
                         </li>
                     </ul>
 
@@ -103,7 +107,7 @@ https://templatemo.com/tm-583-festava-live
 
                     <div class="col-lg-6 col-10 mx-auto">
                         <form class="custom-form ticket-form mb-5 mb-lg-0" action="#" method="post" role="form">
-                            <h2 class="text-center mb-4">Daftar</h2>
+                            <h2 class="text-center mb-4">Ubah Data</h2>
 
                             <div class="ticket-form-body">
                                 
