--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@ https://templatemo.com/tm-583-festava-live
           <div class="row">
             <div class="col-lg-12 col-12 d-flex flex-wrap">
               <p class="d-flex me-4 mb-0">
-                <strong class="text-dark">Selamat datang!</strong>
+                <strong class="text-dark">Selamat Datang</strong>
               </p>
             </div>
           </div>
