--- a/login.html
+++ b/login.html
@@ -42,8 +42,8 @@ https://templatemo.com/tm-583-festava-live
 
                     <div class="col-lg-12 col-12 d-flex flex-wrap">
                         <p class="d-flex me-4 mb-0">
-                            <i class="bi-person custom-icon me-2"></i>
-                            <strong class="text-dark">Selamat datang</strong>
+                            <!-- <i class="bi-person custom-icon me-2"></i> -->
+                            <strong class="text-dark">Selamat Datang</strong>
                         </p>
                     </div>
 
