--- a/profile.html
+++ b/profile.html
@@ -107,67 +107,67 @@ https://templatemo.com/tm-583-festava-live
 
                     <div class="col-lg-6 col-10 mx-auto">
                         <form class="custom-form ticket-form mb-5 mb-lg-0" action="/home_user" method="post" role="form">
-                            <h2 class="text-center mb-4">Ubah Data</h2>
+                            <h2 class="text-center mb-4">Akun Saya</h2>
 
                             <div class="ticket-form-body">
                                 
-                                <input type="text" class="form-control" name="nim" value="{{.nim}}" required>
+                                <input type="text" class="form-control" name="nim" value="{{.nim}}" disabled>
                                     <!-- placeholder="Ph 085-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required=""> -->
                                 
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-12">
                                         <input type="text" name="username" value="{{.username}}" id="username"
-                                            class="form-control" required>
+                                            class="form-control" disabled>
                                     </div>
 
                                     <div class="col-lg-6 col-md-6 col-12">
                                         <input type="password" name="password" value="{{.password}}" id="password" class="form-control"
-                                            required>
+                                            disabled>
                                     </div>
 
                                     <div class="col-lg-6 col-md-6 col-12">
                                         <input type="text" name="nama" value="{{.nama}}" id="nama" class="form-control"
-                                            required>
+                                            disabled>
                                     </div>
 
                                     <div class="col-lg-6 col-md-6 col-12">
                                         <input type="text" name="asal_instansi" value="{{.asal_instansi}}" id="asal_instansi" class="form-control" 
-                                            required>
+                                            disabled>
                                     </div>
                                 </div>
                                 <font color="#cebc1b"><strong>File yang diunggah sebelumnya: {{.upload_file}}</strong></font>
-                                <font color="#F0F0F0">
+                                <!-- <font color="#F0F0F0">
                                     <label class="form-label" for="upload_file">Upload File Baru</label>
                                     <input type="file" name="upload_file" class="form-control" id="upload_file"/>
-                                </font>
-
+                                </font> -->
+                                <br>
+                                <br>
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-12">
                                         <font color="#F0F0F0"><label for="mulai_pkl">Mulai PKL</label>
                                             <input type="text" name="mulai_pkl" value="{{.mulai_pkl.Format "2006-01-02"}}" id="mulai_pkl"
-                                                class="form-control" required></font>
+                                                class="form-control" disabled></font>
                                     </div>
 
                                     <div class="col-lg-6 col-md-6 col-12">
                                         <font color="#F0F0F0"><label for="selesai_pkl">Selesai PKL</label>
                                             <input type="text" name="selesai_pkl" value="{{.selesai_pkl.Format "2006-01-02"}}" id="selesai_pkl" class="form-control"
-                                                required></font>
+                                                disabled></font>
                                     </div>
 
                                     <div class="col-lg-6 col-md-6 col-12">
                                         <input type="text" name="role" value="{{.role}}" id="role"
-                                            class="form-control" required>
+                                            class="form-control" disabled>
                                     </div>
 
                                     <div class="col-lg-6 col-md-6 col-12">
-                                        <input type="text" name="status" value="{{.status}}" id="status" class="form-control"
-                                            required>
+                                        <input type="text" name="status" value="{{.status}}" id="status" class="form-control" disabled>
                                     </div>
                                 </div>
 
-                                <div class="col-lg-4 col-md-10 col-8 mx-auto">
+                                <!-- <div class="col-lg-4 col-md-10 col-8 mx-auto">
                                     <button type="submit" value="Save" class="form-control">Simpan</button>
-                            </div>
+                            </div> -->
                             <a href="/edit_profile">Edit Profile</a>
                         </form>
                     </div>
@@ -230,7 +230,7 @@ https://templatemo.com/tm-583-festava-live
 
                     <ul class="site-footer-links">
                         <li class="site-footer-link-item">
-                            <a href="/home" class="site-footer-link">Halaman Utama</a>
+                            <a href="/home_user" class="site-footer-link">Halaman Utama</a>
                         </li>
 
                         <li class="site-footer-link-item">
