--- a/home_user.html
+++ b/home_user.html
@@ -41,7 +41,7 @@ https://templatemo.com/tm-583-festava-live
           <div class="row">
             <div class="col-lg-12 col-12 d-flex flex-wrap">
               <p class="d-flex me-4 mb-0">
-                <i class="bi-person custom-icon me-2"></i>
+                <!-- <i class="bi-person custom-icon me-2"></i> -->
                 <strong class="text-dark">Selamat Datang {{ .username}}</strong>
               </p>
             </div>
@@ -101,7 +101,7 @@ https://templatemo.com/tm-583-festava-live
                 <a
                   class="nav-link"
                   href="/logout"
-                  onclick="return confirm('Are you sure want to logout?')"
+                  onclick="return confirm('Apakah anda yakin ingin keluar?')"
                   >Logout</a
                 >
               </li>
