--- a/home.html
+++ b/home.html
@@ -93,6 +93,10 @@ https://templatemo.com/tm-583-festava-live
               <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
               </li>
+
+              <!-- <li class="nav-item">
+                <a class="nav-link" href="/login_admin">Login Admin</a>
+              </li> -->
             </ul>
 
             <a href="/register" class="btn custom-btn d-lg-block d-none"
@@ -109,7 +113,6 @@ https://templatemo.com/tm-583-festava-live
           <div class="row">
             <div class="col-12 mt-auto mb-5 text-center">
               <small>UHAMKA mempersembahkan</small>
-              F0F0F0
               <font color="#1b2f5c">
                 <h1 class="text-mb-5">Portal Pendaftaran PKL</h1>
               </font>
