--- a/home.html
+++ b/home.html
@@ -208,26 +208,43 @@ https://templatemo.com/tm-583-festava-live
                   supervisi yang kompeten di bidangnya dengan tujuan memperoleh
                   pengalaman dan kecakapan penguasaan keahlian di suatu bidang
                   hingga mencapai suatu tingkat keahlian profesional tertentu.
+                  UHAMKA akan membantu siswa dalam melaksanakan program magang
+                  kerja dengan tujuan utama
                 </p>
 
                 <h6 class="text-white mt-4">
-                  Siswa Akan Diperkenalkan Dunia Usaha
+                  Memperkenalkan Dunia Usaha/Industri
                 </h6>
 
                 <p class="text-white">
                   Saat melalui masa praktik kerja lapangan siswa akan
-                  diperkenalkan ke dunia usaha, sehingga setelah lulus masa PKL
-                  siswa akan mendapat ilmu seputar dunia usaha/industri
+                  diperkenalkan pada dunia usaha/industri, sehingga setelah
+                  lulus masa PKL siswa akan mendapat ilmu dan pandangan baru
+                  seputar dunia usaha/industri.
                 </p>
 
-                <h6 class="text-white mt-4">Whole Night Party</h6>
+                <h6 class="text-white mt-4">
+                  Menumbuhkan Sikap Profesionalisme
+                </h6>
 
                 <p class="text-white">
-                  Please tell your friends about our website. Thank you.
+                  Siswa akan dibimbing agar memiliki sikap profesionalisme
+                  sehingga di masa yang akan datang siswa dapat terjun ke dalam
+                  dunia industri dengan persiapan yang matang.
+                </p>
+
+                <h6 class="text-white mt-4">
+                  Meningkatkan Daya Kreasi dan Produktivitas
+                </h6>
+
+                <p class="text-white">
+                  Daya Kreasi dan Produktivitas akan ditingkatkan melalui kerja
+                  sama tim, siswa akan diberi kepercayaan untuk menyelesaikan
+                  proyek yang membantu UHAMKA mempertahankan kualitasnya sebagai
+                  kampus yang beprestasi nan unggul.
                 </p>
               </div>
             </div>
-
             <div class="col-lg-6 col-12">
               <div class="about-text-wrap">
                 <img
@@ -240,7 +257,7 @@ https://templatemo.com/tm-583-festava-live
         </div>
       </section>
 
-      <section class="artists-section section-padding" id="section_3">
+      <section class="schedule-section section-padding" id="section_3">
         <div class="container">
           <div class="row">
             <div class="col-12 text-center">
