--- a/home_user.html
+++ b/home_user.html
@@ -242,7 +242,7 @@ https://templatemo.com/tm-583-festava-live
         </div>
       </section>
 
-      <section class="artists-section section-padding" id="section_3">
+      <section class="schedule-section section-padding" id="section_3">
         <div class="container">
           <div class="row">
             <div class="col-12 text-center">
