--- a/login.html
+++ b/login.html
@@ -120,6 +120,12 @@ https://templatemo.com/tm-583-festava-live
                                         <input type="password" name="password" id="password" class="form-control" placeholder="Password"
                                             required>
                                     </div>
+                                     <!-- <font color="#F0F0F0">
+                                    <input type="radio" id="user" name="role" value="user" checked>
+                                    <label for="user">User</label>
+                                    
+                                    <input type="radio" id="admin" name="role" value="admin">
+                                    <label for="admin">Admin</label><br> -->
 
                                     <div class="col-lg-4 col-md-10 col-8 mx-auto">
                                         <button type="submit" class="form-control">Submit
