--- a/profile.html
+++ b/profile.html
@@ -110,27 +110,31 @@ https://templatemo.com/tm-583-festava-live
                             <h2 class="text-center mb-4">Akun Saya</h2>
 
                             <div class="ticket-form-body">
-                                
+                                <font color="#F0F0F0"><label for="nim">NIM</label>
                                 <input type="text" class="form-control" name="nim" value="{{.nim}}" disabled>
                                     <!-- placeholder="Ph 085-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required=""> -->
                                 
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-12">
+                                        <label for="username">Username</label>
                                         <input type="text" name="username" value="{{.username}}" id="username"
                                             class="form-control" disabled>
                                     </div>
 
                                     <div class="col-lg-6 col-md-6 col-12">
+                                        <label for="password">Password</label>
                                         <input type="password" name="password" value="{{.password}}" id="password" class="form-control"
                                             disabled>
                                     </div>
 
                                     <div class="col-lg-6 col-md-6 col-12">
+                                        <label for="nama">Nama</label>
                                         <input type="text" name="nama" value="{{.nama}}" id="nama" class="form-control"
                                             disabled>
                                     </div>
 
                                     <div class="col-lg-6 col-md-6 col-12">
+                                        <label for="asal_instansi">Asal Instansi</label>
                                         <input type="text" name="asal_instansi" value="{{.asal_instansi}}" id="asal_instansi" class="form-control" 
                                             disabled>
                                     </div>
@@ -156,11 +160,13 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
 
                                     <div class="col-lg-6 col-md-6 col-12">
+                                        <label for="role">Role</label>
                                         <input type="text" name="role" value="{{.role}}" id="role"
                                             class="form-control" disabled>
                                     </div>
 
                                     <div class="col-lg-6 col-md-6 col-12">
+                                        <label for="status">Status</label>
                                         <input type="text" name="status" value="{{.status}}" id="status" class="form-control" disabled>
                                     </div>
                                 </div>
@@ -168,8 +174,9 @@ https://templatemo.com/tm-583-festava-live
                                 <!-- <div class="col-lg-4 col-md-10 col-8 mx-auto">
                                     <button type="submit" value="Save" class="form-control">Simpan</button>
                             </div> -->
-                            <a href="/home_user">Home</a>
-                            <a href="/edit_profile">Edit Profile</a>
+                            <font color="#cebc1b"><strong>
+                                <br>
+                                <a href="/edit_profile">Edit Profile</a></strong></font>
                         </form>
                     </div>
                 </div>
