--- a/register.html
+++ b/register.html
@@ -155,9 +155,9 @@ https://templatemo.com/tm-583-festava-live
                                         </font>
                                     </div>
 
-                                    <div class="col-lg-6 col-md-6 col-12">
+                                    <div class="col-lg-6 col-md-6 col-12 d-none">
                                         <input type="text" name="role" id="role"
-                                            class="form-control" placeholder="Role" required>
+                                            class="form-control" placeholder="Role" value="2" required>
                                     </div>
 
                                     <div class="col-lg-6 col-md-6 col-12">
