--- a/home_admin.html
+++ b/home_admin.html
@@ -41,7 +41,7 @@ https://templatemo.com/tm-583-festava-live
           <div class="row">
             <div class="col-lg-12 col-12 d-flex flex-wrap">
               <p class="d-flex me-4 mb-0">
-                <i class="bi-person custom-icon me-2"></i>
+                <!-- <i class="bi-person custom-icon me-2"></i> -->
                 <strong class="text-dark">Selamat Datang Admin</strong>
               </p>
             </div>
@@ -94,7 +94,7 @@ https://templatemo.com/tm-583-festava-live
               </li>
 
               <li class="site-footer-link-item">
-                <a href="/profile" class="nav-link">Profile</a>
+                <a href="/profile_admin" class="nav-link">Profile</a>
               </li>
 
               <li class="nav-item">
@@ -562,7 +562,7 @@ https://templatemo.com/tm-583-festava-live
               </li>
 
               <li class="site-footer-link-item">
-                <a href="/profile" class="nav-link">Profile</a>
+                <a href="/profile_admin" class="nav-link">Profile</a>
               </li>
 
               <li class="site-footer-link-item">
